--- a/assets/style.css
+++ b/assets/style.css
@@ -12,20 +12,83 @@
   -webkit-text-stroke-color: rgb(0, 0, 0);
 }
 
+#wicon {
+  width: 50px;
+  height: 50px;
+}
+
 .card-body1 {
+  margin-top: 20px;
   height: 200px;
 }
+
 .card-body {
   height: 175px;
 }
+
 .form-inline {
   height: 450px;
 }
+
 .card {
   margin-top: 20px;
 }
+
 .daily {
   font-weight: bolder;
   font-size: x-large;
   text-align: center;
+}
+
+.list-button {
+  width: 200px;
+  margin-top: 20px;
+  background-color: rgb(20, 69, 141);
+  color: white;
+  margin-left: 50px;
+  height: 30px;
+}
+
+#forecastRow {
+  padding-top: 1px;
+  padding-bottom: 2px;
+}
+
+#fiveDay {
+  list-style: none;
+  background-color: rgb(20, 69, 141);
+  color: white;
+  padding: 0.5em;
+  margin-left: 0.1em;
+}
+
+#search {
+  margin-top: 10px;
+  margin-left: 50px;
+}
+
+#clear {
+  margin-top: 10px;
+  margin-left: 50px;
+  width: 70px;
+}
+
+.low {
+  background: #0a0;
+}
+
+.moderate {
+  background: rgb(187, 187, 32);
+}
+
+.high {
+  background: rgb(233, 106, 21);
+}
+
+.veryHigh {
+  background: rgb(221, 15, 15);
+}
+
+.extreme {
+  background: rgb(146, 18, 197);
 }
